--- a/core/web-assets/src/main/assets/js/apps/onms-central-search/quicksearch.html
+++ b/core/web-assets/src/main/assets/js/apps/onms-central-search/quicksearch.html
@@ -1,3 +1,5 @@
+<span>
+
 <style type="text/css">
     .search-result {
         max-height: 700px;
@@ -59,7 +61,7 @@
         </label>
         <!-- Loading Indicator -->
         <div ng-if="showLoadingIndicator" class="btn btn-secondary rounded-0">
-            <div class="spinner-border spinner-border-sm text-white" role="status"/>
+            <div class="spinner-border spinner-border-sm text-white" role="status"></div>
             <span class="sr-only">Loading...</span>
         </div>
         <!-- Reset Search -->
@@ -82,7 +84,7 @@
             <a id="onms-search-result-item-{{$index}}" ng-class="{'selected': item.selected}" ng-repeat-end ng-if="item.type === 'Item'" href="{{item.url}}" class="list-group-item list-group-item-action" ng-mouseover="select($index)" ng-click="resetQuery()">
                 <h6 class="mb-0"><i class="{{item.icon}}" ng-if="item.icon">&nbsp;</i>{{item.label}} <i style="-webkit-transform: scaleY(-1);transform: scaleY(-1);" class="fa fa-reply pull-right" ng-if="item.selected"></i></h6>
                 <small class="mr-4" ng-class="{'text-muted': !item.selected}" ng-repeat="match in item.matches">{{match.label}}: {{match.value}}</small>
-                <br ng-if="item.info !== ''"/>
+                <br ng-if="item.info !== ''">
                 <small class="mr-4" ng-class="{'text-muted': !item.selected}" ng-if="item.info !== ''">{{item.info}}</small>
             </a>
         </div>
@@ -96,3 +98,5 @@
         </div>
     </div>
 </form>
+
+</span>
